--- a/package.json
+++ b/package.json
@@ -1,30 +1,54 @@
 {
   "name": "h2go",
-  "version": "1.0.0",
-  "description": "Node-Express-Mongo backend for https://github.com/AJLiu/CS2340-Project/",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www"
+    "start": "gulp",
+    "clean": "rimraf ./build ./node_modules",
+    "clean-build": "rimraf ./build",
+    "build": "gulp build",
+    "docs": "typedoc --out ./docs --excludePrivate --target ES6"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AJLiu/CS2340-Project-Backend.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AJLiu/CS2340-Project-Backend/issues"
-  },
-  "homepage": "https://github.com/AJLiu/CS2340-Project-Backend#readme",
   "dependencies": {
-    "express": "^4.14.1",
-    "mongoose": "^4.8.1",
+    "@types/joi": "^9.0.33",
+    "@types/passport-local-mongoose": "^4.0.8",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
-    "jade": "~1.11.0",
+    "express-session": "^1.15.1",
+    "express-validation": "^1.0.1",
+    "http-status": "^1.0.1",
+    "joi": "^9.2.0",
+    "mongoose": "^4.8.2",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  },
+  "devDependencies": {
+    "@types/body-parser": "0.0.33",
+    "@types/cookie-parser": "^1.3.30",
+    "@types/express": "^4.0.35",
+    "@types/morgan": "^1.7.32",
+    "@types/node": "^7.0.5",
+    "@types/passport": "^0.3.3",
+    "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-typescript": "^3.1.4",
+    "gulp-util": "^3.0.8",
+    "gulp-watch": "^4.3.11",
+    "nodemon": "^1.11.0",
+    "react-hot-loader": "^1.3.1",
+    "ts-loader": "^2.0.0",
+    "tslint": "^4.4.2",
+    "tslint-eslint-rules": "^3.3.0",
+    "typedoc": "^0.5.5",
+    "typescript": "^2.1.6",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.16.1"
   }
 }
