--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rimraf ./build ./node_modules",
     "clean-build": "rimraf ./build",
     "build": "gulp build",
-    "docs": "typedoc --out ./docs --excludePrivate --target ES6"
+    "docs": "typedoc --out ./docs --excludePrivate --target ES6",
+    "run": "gulp nodemon"
   },
   "dependencies": {
     "@types/joi": "^9.0.33",
