--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
-  },
-  "devDependencies": {
+    "react-dom": "^15.4.2",
     "@types/body-parser": "0.0.33",
     "@types/cookie-parser": "^1.3.30",
     "@types/express": "^4.0.35",
