fix for missing recursive dependencies

--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "typescript": "^2.1.6",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1"
+    "webpack-hot-middleware": "^2.16.1",
+    "gulp-concat": "^2.6.1",
+    "map-stream": "~0.1.0",
+    "through": "~2.3.8"
   }
 }
