--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "run": "gulp nodemon"
   },
   "dependencies": {
+    "@types/body-parser": "0.0.33",
+    "@types/cookie-parser": "^1.3.30",
+    "@types/express": "^4.0.35",
     "@types/joi": "^9.0.33",
+    "@types/morgan": "^1.7.32",
+    "@types/node": "^7.0.5",
+    "@types/passport": "^0.3.3",
     "@types/passport-local-mongoose": "^4.0.8",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
@@ -19,27 +25,22 @@
     "express": "~4.14.0",
     "express-session": "^1.15.1",
     "express-validation": "^1.0.1",
-    "http-status": "^1.0.1",
-    "joi": "^9.2.0",
-    "mongoose": "^4.8.2",
-    "morgan": "~1.7.0",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "@types/body-parser": "0.0.33",
-    "@types/cookie-parser": "^1.3.30",
-    "@types/express": "^4.0.35",
-    "@types/morgan": "^1.7.32",
-    "@types/node": "^7.0.5",
-    "@types/passport": "^0.3.3",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-typescript": "^3.1.4",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
+    "http-status": "^1.0.1",
+    "joi": "^9.2.0",
+    "mongoose": "^4.8.2",
+    "mongoose-auto-increment": "^5.0.1",
+    "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "ts-loader": "^2.0.0",
     "tslint": "^4.4.2",
@@ -49,5 +50,8 @@
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1"
+  },
+  "devDependencies": {
+    "@types/mongoose-auto-increment": "^5.0.29"
   }
 }
