--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/cookie-parser": "^1.3.30",
     "@types/express": "^4.0.35",
     "@types/joi": "^9.0.33",
+    "@types/mongoose-auto-increment": "^5.0.29",
     "@types/morgan": "^1.7.32",
     "@types/node": "^7.0.5",
     "@types/passport": "^0.3.3",
     "@types/passport-local-mongoose": "^4.0.8",
+    "@types/request": "0.0.42",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
@@ -26,12 +28,14 @@
     "express-session": "^1.15.1",
     "express-validation": "^1.0.1",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-typescript": "^3.1.4",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
     "http-status": "^1.0.1",
     "joi": "^9.2.0",
+    "map-stream": "~0.1.0",
     "mongoose": "^4.8.2",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.7.0",
@@ -42,6 +46,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
+    "request": "^2.81.0",
+    "through": "~2.3.8",
     "ts-loader": "^2.0.0",
     "tslint": "^4.4.2",
     "tslint-eslint-rules": "^3.3.0",
@@ -49,10 +55,6 @@
     "typescript": "^2.1.6",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
-    "@types/mongoose-auto-increment": "^5.0.29",
-    "webpack-hot-middleware": "^2.16.1",
-    "gulp-concat": "^2.6.1",
-    "map-stream": "~0.1.0",
-    "through": "~2.3.8"
+    "webpack-hot-middleware": "^2.16.1"
   }
 }
